--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
   build-windows:
     runs-on: windows-latest
     steps:
-    - uses: actions/checkout@4
+    - uses: actions/checkout@v4
     - name: make
       run: make
     - uses: actions/upload-artifact@v4.3.3
