--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: make
-      run: build_norun.sh
+      run: ./build_norun.sh
     - uses: actions/upload-artifact@v4.3.3
       with:
         name: vega-linux
@@ -28,7 +28,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: make
-      run: build_norun.cmd
+      run: ./build_norun.cmd
     - uses: actions/upload-artifact@v4.3.3
       with:
         name: vega-windows
