--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+    - name: perms fix
+      run: chmod +x build_norun.sh
     - name: make
       run: ./build_norun.sh
     - uses: actions/upload-artifact@v4.3.3
