--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,3 +45,9 @@ jobs:
           files: ${{ github.workspace }}/*.zip
           name: autobuild
           tag_name: autobuild
+    - name: Discord notification
+      env:
+        DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+      uses: Ilshidur/action-discord@master
+      with:
+        args: 'The project {{ EVENT_PAYLOAD.repository.full_name }} has been deployed.'
