--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,4 +53,4 @@ jobs:
     - name: notify discord
       uses: tsickert/discord-webhook@v5.3.0
       with:
-        webhook-url: ${{ DISCORD_WEBHOOK }}
+        webhook-url: ${{ secrets.DISCORD_WEBHOOK }}
