--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,7 +54,4 @@ jobs:
       uses: tsickert/discord-webhook@v5.3.0
       with:
         webhook-url: ${{ secrets.DISCORD_WEBHOOK }}
-        embed-title: a new release dropped!
-        embed-description: https://github.com/maksw2/VEGA/releases
-        username: vegabot
-        avatar-url: https://maksw.pl/images/ja1.webp
+        raw-data: ${{ secrets.discord_json }}
