--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,8 +54,8 @@ jobs:
       uses: tsickert/discord-webhook@v5.3.0
       with:
         webhook-url: ${{ secrets.DISCORD_WEBHOOK }}
-        username: vegabot
-        avatar-url: https://maksw.pl/images/ja1.webp
-        embed-title: A new release dropped!
-        embed-description: [Get it here](https://github.com/maksw2/VEGA/releases)
+        username: "vegabot"
+        avatar-url: "https://maksw.pl/images/ja1.webp"
+        embed-title: "A new release dropped!"
+        embed-description: "[Get it here](https://github.com/maksw2/VEGA/releases)"
         embed-color: 5814783
