--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,6 +32,7 @@ jobs:
         files: ${{ github.workspace }}/vega-windows.zip
         name: autobuild
         tag_name: autobuild
+        make_latest: true
     - name: Discord WebHook Notify
       uses: tsickert/discord-webhook@v6.0.0
       with:
